--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h2 class="page-section-heading text-center text-uppercase mb-0">Juega</h2>
             <p class="text-center mt-3 small juega">
                 Además de con el concurso, <strong class="yellow">puedes seguir poniendo a prueba tus conocimientos en geografía</strong>
-                con los siguientes juegos (creados por: organismos públicos, como privados y particulares).
+                con los siguientes juegos (creados por: organismos públicos, privados y particulares).
             </p>
             <!-- Icon Divider-->
             <div class="divider-custom">
@@ -197,7 +197,7 @@
                  una iniciativa internacional en la que una
                 tarde o noche al año <a href="https://www.geonight.net/geonight-2021-events-map/">
                     se organizan eventos simultáneamente en todo el mundo</strong>
-                </a> con este fin.
+                </a>.
 
             </p>
             <p>
