Updating: 'About the iniative' text

--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
         <div class="container">
             <h2>Sobre esta iniciativa</h2>
             <p>
-                La <a href="https://es.wikipedia.org/wiki/Geograf%C3%ADa">geografía
-                </a> es ciencia apasionante que mueve el mundo, sin embargo bastante desconocida para la mayoría de las personas,
-                <strong class="bg-yellow">si paras a cualquiera por la calle
+                La <a href="https://es.wikipedia.org/wiki/Geograf%C3%ADa">geografía</a>
+                es la ciencia apasionante que mueve el mundo y anecdóticamente bastante desconocida por la mayoría de las personas.
+                <strong class="bg-yellow">Si paras a cualquiera por la calle
                 y le preguntas: "¿sabes <a href="https://www.age-geografia.es/site/somos-geografs/"">qué puede hacer una persona titulada en geografía</a>?",
                 habrá pocas que sepan decir algo más que: leer mapas, nombrar capitales, ríos o cosas parecidas.</strong>
             </p>
             <p>
-                L@s profesionales en geografía están capacitad@s para mucho más, como: saber cómo <a href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial">ordenar del territorio</a>,
+                Las/os profesionales en geografía están capacitados/as para mucho más, como: saber cómo <a href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial">ordenar del territorio</a>,
                 <a href="https://es.wikipedia.org/wiki/Geomarketing">diseñar estrategias de geomarketing</a>, explotar herramientas
                 de <a href="https://es.wikipedia.org/wiki/Teledetecci%C3%B3n">teledetección</a> de última generación,
                 encontrar patrones y relaciones entre problemas de humanos y naturales de diversa índole a través del <a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_espacial">análisis espacial</a> convirtiéndoles
@@ -202,12 +202,10 @@
 
             </p>
             <p>
-                 Con el objetivo de poner en relieve la geografía y a l@s profesionales de este campo, se celebra <strong class="bg-yellow">La "Noche de la Geografía"
+                 Con el objetivo de poner en relieve la geografía y a los/as profesionales de este campo, se celebra <strong class="bg-yellow">La "Noche de la Geografía"
                  (<a href="https://www.geonight.net/">geonight.net</a>)
                  una iniciativa internacional en la que una
-                tarde o noche al año <a href="https://www.geonight.net/geonight-2021-events-map/">
-                    se organizan eventos simultáneamente en todo el mundo</strong>
-                </a>.
+                tarde o noche al año <a href="https://www.geonight.net/geonight-2021-events-map/">se organizan eventos simultáneamente en todo el mundo</a></strong>.
 
             </p>
             <p>
@@ -218,10 +216,8 @@
             </p>
             <p>
                 Concretamente <strong class="bg-yellow">esta página que estás visitando es una
-                <a href="https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/">
-                    iniciativa lúdica puesta en marcha por la Asociación Española de Geografía
-                </a></strong> en colaboración con otras
-                entidades nacionales para difundir los
+                <a href="https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/">iniciativa lúdica puesta en marcha por la Asociación Española de Geografía</a></strong>
+                en colaboración con otras entidades para difundir los
                 contenidos de la Geografía, así como fomentar la conexión entre
                 el colectivo de geógrafos/as y aficionados/as a la Geografía de
                 distintas partes del mundo.
