Fixing/hacking problem with white space in footer

--- a/index.html
+++ b/index.html
@@ -806,8 +806,11 @@
 
         })
     </script>
+
+
+
     <!-- Footer-->
-    <footer class="footer text-center bg-port-gore">
+    <footer class="footer text-center bg-port-gore mt-12">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
