Changing geogragía by Geografía

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <link rel="shortcut icon" href="https://geonight.age-geografia.es/assets/imgs/favicon.ico" type="image/x-icon">
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
-    <title>GeoNight, la noche de la geografía</title>
+    <title>GeoNight (by AGE), la noche de la Geografía</title>
     <!-- Search Engine -->
-    <meta name="description" content="¿Quieres disfrutar con diferentes pruebas y concurso y demostrar cuanto sabes de geografía?">
+    <meta name="description" content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
     <meta name="image" content="https://geonight.age-geografia.es/assets/imgs/imagen-meta.jpeg">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="GeoNight, la noche de la geografía">
-    <meta itemprop="description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta itemprop="name" content="GeoNight (by AGE), la noche de la Geografía">
+    <meta itemprop="description" content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
     <meta itemprop="image" content="https://geonight.age-geografia.es/assets/imgs/imagen-meta.jpeg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary with large image">
-    <meta name="twitter:title" content="GeoNight, la noche de la geografía">
-    <meta name="twitter:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta name="twitter:title" content="GeoNight (by AGE), la noche de la Geografía">
+    <meta name="twitter:description" content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="GeoNight, la noche de la geaografía">
-    <meta name="og:description" content="¿Quieres disfrutar con diferentes pruebas y un concurso y demostrar cuanto sabes de geografía?">
+    <meta name="og:title" content="GeoNight (by AGE), la noche de la Geografía">
+    <meta name="og:description" content="Iniciativa lúdica puesta en marcha por la Asociación Española de Geografía para poner a prueba tus conocimientos sobre Geografía">
     <meta name="og:image" content="https://geonight.age-geografia.es/assets/imgs/imagen-meta.jpeg">
     <meta name="og:url" content="https://geonight.age-geografia.es/">
     <meta name="og:site_name" content="GeoNight">
@@ -78,7 +78,7 @@
     <header class="masthead bg-primary text-white text-center" id="hero">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb1">La noche de la geografía</h1>
+            <h1 class="masthead-heading text-uppercase mb1">La noche de la Geografía</h1>
             <h2>9 Abril 2021</h2>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
@@ -117,9 +117,9 @@
                         </strong>.
                     </p>
                     <p>
-                        De forma colectiva cada grupo tendrá que desvelar la identidad
+                        <strong>De forma colectiva cada grupo tendrá que desvelar la identidad
                         y localización de una serie de lugares ubicados en distintos
-                        puntos del mundo. Para descubrirlos, se darán pistas de contenido geográfico
+                        puntos del mundo</strong>. Para descubrirlos, se darán pistas de contenido geográfico
                         (características del medio físicos y del medio humano,
                         potencialidades, riesgos, problemas ambientales, etc.).
                     </p>
@@ -151,8 +151,8 @@
             <!-- Portfolio Section Heading-->
             <h2 class="page-section-heading text-center text-uppercase mb-0">Juega</h2>
             <p class="text-center mt-3 small juega">
-                Además de con el concurso, <strong class="yellow">puedes seguir poniendo a prueba tus conocimientos en geografía</strong>
-                con los siguientes juegos (creados por: organismos públicos, privados y particulares).
+                Además de con el concurso, <strong class="yellow">puedes seguir poniendo a prueba tus conocimientos en Geografía</strong>
+                con los siguientes juegos.
             </p>
             <!-- Icon Divider-->
             <div class="divider-custom">
@@ -187,14 +187,14 @@
         <div class="container">
             <h2>Sobre esta iniciativa</h2>
             <p>
-                La <a href="https://es.wikipedia.org/wiki/Geograf%C3%ADa">geografía</a>
+                La <a href="https://es.wikipedia.org/wiki/Geograf%C3%ADa">Geografía</a>
                 es la ciencia apasionante que mueve el mundo y anecdóticamente bastante desconocida por la mayoría de las personas.
                 <strong class="bg-yellow">Si paras a cualquiera por la calle
-                y le preguntas: "¿sabes <a href="https://www.age-geografia.es/site/somos-geografs/"">qué puede hacer una persona titulada en geografía</a>?",
+                y le preguntas: "¿sabes <a href="https://www.age-geografia.es/site/somos-geografs/"">qué puede hacer una persona titulada en Geografía</a>?",
                 habrá pocas que sepan decir algo más que: leer mapas, nombrar capitales, ríos o cosas parecidas.</strong>
             </p>
             <p>
-                Las/os profesionales en geografía están capacitados/as para mucho más, como: saber cómo <a href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial">ordenar del territorio</a>,
+                Las/os profesionales en Geografía están capacitados/as para mucho más, como: saber cómo <a href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial">ordenar del territorio</a>,
                 <a href="https://es.wikipedia.org/wiki/Geomarketing">diseñar estrategias de geomarketing</a>, explotar herramientas
                 de <a href="https://es.wikipedia.org/wiki/Teledetecci%C3%B3n">teledetección</a> de última generación,
                 encontrar patrones y relaciones entre problemas de humanos y naturales de diversa índole a través del <a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_espacial">análisis espacial</a> convirtiéndoles
