Adding Geografia en Red

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                 Las/os profesionales en Geografía están capacitados/as para mucho más, como: saber cómo <a href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial">ordenar del territorio</a>,
                 <a href="https://es.wikipedia.org/wiki/Geomarketing">diseñar estrategias de geomarketing</a>, explotar herramientas
                 de <a href="https://es.wikipedia.org/wiki/Teledetecci%C3%B3n">teledetección</a> de última generación,
-                encontrar patrones y relaciones entre problemas de humanos y naturales de diversa índole a través del <a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_espacial">análisis espacial</a> convirtiéndoles
-                en perfectos aliados para ayudar a lograr los <a href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">Objetivos de Desarrollo Sostenible</a>, etc.
+                encontrar patrones y relaciones entre problemas de humanos y naturales a través del <a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_espacial">análisis espacial</a>, convirtiéndoles
+                en perfectos aliados para ayudar a lograr los <a href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">Objetivos de Desarrollo Sostenible</a>, y mucho más.
 
             </p>
             <p>
@@ -216,14 +216,14 @@
             </p>
             <p>
                 Concretamente <strong class="bg-yellow">esta página que estás visitando es una
-                <a href="https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/">iniciativa lúdica puesta en marcha por la Asociación Española de Geografía</a></strong>
-                en colaboración con otras entidades para difundir los
+                <a href="https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/">iniciativa lúdica puesta en marcha por la Asociación Española de Geografía</a>
+                en colaboración con otras entidades</strong> para difundir los
                 contenidos de la Geografía, así como fomentar la conexión entre
                 el colectivo de geógrafos/as y aficionados/as a la Geografía de
                 distintas partes del mundo.
             </p>
             <p>
-                El juego Terra Incógnita ha sido creado por la AGE y la Red TransUMAntes de la UMA, y desarrollado desde
+                El juego-concurso Terra Incógnita ha sido creado por la AGE y la Red TransUMAntes de la UMA, y desarrollado desde
                 la comunidad de GeoDevelopers.
             </p>
 
@@ -561,6 +561,24 @@
                             </div>
                         </div>
                     </div>
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img src="assets/imgs/logo-Geografía-en-red.png" alt="Logo Geografía en Red">
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>Geografía en red</h4>
+                                <p>
+                                    <a href="https://bit.ly/SerieGeograf%C3%ADaEnRed">
+                                        Geografía en red
+                                    </a> es un proyecto que surge de la colaboración entre <a href="https://gersonbeltran.com/">Gersón Beltrán</a> y <a href="https://www.orbemapa.com/">Jorge de Río</a> que pretende dar a conocer nuevos usos de la geografía en Internet como ciencia que conecta a las personas con un entorno físico y digital a través de la variable espacial. Se plasma en la publicación de una trilogía: «Geografía en red: de la reflexión a la acción», un conjunto organizado de reflexiones conectadas y llevadas a la acción que desarrolla tres grandes aspectos vinculados con las tecnologías de la información y la comunicación geográficas: la tecnología, los datos y la comunicación, conformando un sistema abierto: la herramienta de la geografía en red es la tecnología, que consume datos (inputs) y produce comunicación (outputs
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -800,6 +818,9 @@
                 </figure>
             </li>
             `);
+            // TODO: Añadir juegos
+            // https://idearagon.aragon.es/geojuegos/htm/es/index.html
+            // http://ideex.es/idedidactica/
             const gamesEl = document.getElementById('games');
             const str = template({ elem: elem });
             gamesEl.insertAdjacentHTML( 'beforeend', str);
