Adding update to game

--- a/game/index.html
+++ b/game/index.html
@@ -157,27 +157,27 @@ style="min-height: 125px"
 
     <div id="content-home" class="page">
 
+
+        <div id="clueText"></div>
+        <div id="activeClue">
+            <img>
+            <iframe></iframe>
+        </div>
+
+
         <h2>
-            🕵️ Pruebas:
+            👀 Pistas:
+        </h2>
+        <div id="clues" class="location-0">
+        </div>
+        <h2>
+            🕵️ Localizaciones:
         </h2>
         <ol id="locations">
 
         </ol>
 
-        <h2>
-            👀 Pistas:
-        </h2>
-        <!-- <p>
-            ✅ Pista 1 > 💡👀 Pista 2 > 💡 Pista 3 > ... <button>Responder</button>
-        </p> -->
-        <div id="clues">
 
-        </div>
-
-        <div id="activeClue">
-            <img>
-            <iframe></iframe>
-        </div>
 
 
 
