--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     <div class="sponsor-grid__item">
                         <div class="sponsor-grid__logo">
                             <div class="sponsor-grid__logo__center">
-                                <img src="assets/imgs/logo-Geografía-en-red.png" alt="Logo Geografía en Red">
+                                <img src="assets/imgs/logo-geografia-en-red.png" alt="Logo Geografía en Red">
                             </div>
                         </div>
                         <div class="sponsor-grid__expander">
