Adding gis and beers

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="assets/css/styles.css" rel="stylesheet" />
+    <link href="assets/css/custom-styles.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -549,7 +550,7 @@
                         </div>
                         <div class="sponsor-grid__expander">
                             <div class="sponsor-grid__description">
-                                <h4>NoSoloSIG</h4>
+                                <h4>NosoloSIG</h4>
                                 <p>
                                     <a href="https://www.nosolosig.com/">
                                         Nosolosig
@@ -574,6 +575,27 @@
                                     <a href="https://bit.ly/SerieGeograf%C3%ADaEnRed">
                                         Geografía en red
                                     </a> es un proyecto que surge de la colaboración entre <a href="https://gersonbeltran.com/">Gersón Beltrán</a> y <a href="https://www.orbemapa.com/">Jorge de Río</a> que pretende dar a conocer nuevos usos de la geografía en Internet como ciencia que conecta a las personas con un entorno físico y digital a través de la variable espacial. Se plasma en la publicación de una trilogía: «Geografía en red: de la reflexión a la acción», un conjunto organizado de reflexiones conectadas y llevadas a la acción que desarrolla tres grandes aspectos vinculados con las tecnologías de la información y la comunicación geográficas: la tecnología, los datos y la comunicación, conformando un sistema abierto: la herramienta de la geografía en red es la tecnología, que consume datos (inputs) y produce comunicación (outputs
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img src="assets/imgs/logo_gis_and_beers.png" alt="Logo Geografía en Red">
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>GIS & BEERS</h4>
+                                <p>
+                                    <a href="http://www.gisandbeers.com/">
+                                        GIS & BEERS
+                                    </a> es el proyecto personal que Roberto Matellanes
+                                    creo en 2015 y en el que además de su conocido blog
+                                    podrás recursos para formarte en GIS, modelos predictivos,
+                                    aplicaciones, herramientas, utilidades, etc.
                                 </p>
 
                             </div>
