--- a/game/index.html
+++ b/game/index.html
@@ -1,238 +1,216 @@
 <!DOCTYPE html>
 <html class="h-100">
+
 <head>
     <meta charset="UTF-8" />
-    <title>GeoNight Juego</title>
+    <title>Terra Incógnita | Juego</title>
 
     <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link
-    rel="stylesheet"
-    href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css"
-    />
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
-    integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B"
-    crossorigin="anonymous"
-    />
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
-    integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+"
-    crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
 
+    <link
+        rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
+        integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B"
+        crossorigin="anonymous"
+    />
+    <link
+        rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
+        integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+"
+        crossorigin="anonymous"
+    />
+    <link
+        rel="stylesheet"
+        href="css/styles.css"
+    >
+    <link
+        rel="stylesheet"
+        href="css/geonight-styles.css"
+    >
+    <link
+        rel="stylesheet"
+        type="text/css"
+        href="css/main.css"
+    />
+    <link
+        rel="stylesheet"
+        href="https://js.arcgis.com/4.18/esri/themes/light/main.css"
+    >
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="h-100">
-    <div id="app" class="h-100 d-flex flex-column">
+    <div
+        id="app"
+        class="h-100 d-flex flex-column"
+    >
         <div class="nav-container">
-            <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top bg-port-gore" id="mainNav">
                 <div class="container">
-                    <div class="navbar-brand logo"></div>
-                    <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <a class="navbar-brand js-scroll-trigger" href="#page-top">GeoNight <span class="subtitle">by AGE</span></a>
+                    <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        Menu
+                        <svg class="svg-inline--fa fa-bars fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav d-none d-md-block ml-auto">
+                            <!-- Login button: show if NOT authenticated -->
+                            <li class="nav-item auth-invisible">
+                                <button
+                                    id="qsLoginBtn"
+                                    onclick="login()"
+                                    class="btn btn-primary btn-margin auth-invisible hidden"
+                                >
+                                    Identifícate
+                                </button>
+                            </li>
+                            <!-- / Login button -->
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            Terra Incognita
-                        </li>
-                        <li class="nav-item">
-                            <a href="/" class="nav-link route-link">Inicio</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav d-none d-md-block">
-                        <!-- Login button: show if NOT authenticated -->
-                        <li class="nav-item auth-invisible">
-                            <button
-                            id="qsLoginBtn"
-                            onclick="login()"
-                            class="btn btn-primary btn-margin auth-invisible hidden"
-                            >
-                            Identifícate
-                        </button>
-                    </li>
-                    <!-- / Login button -->
+                            <!-- Fullsize dropdown: show if authenticated -->
+                            <li class="nav-item dropdown auth-visible hidden">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#"
+                                    id="profileDropDown"
+                                    data-toggle="dropdown"
+                                >
+                                    <!-- Profile image should be set to the profile picture from the id token -->
+                                    <img
+                                        alt="Profile picture"
+                                        class="nav-user-profile profile-image rounded-circle"
+                                        width="50"
+                                    />
+                                </a>
+                                <div class="dropdown-menu">
+                                    <!-- Show the user's full name from the id token here -->
+                                    <div class="dropdown-header nav-user-name user-name"></div>
+                                    <a
+                                        href="/profile"
+                                        class="dropdown-item dropdown-profile route-link"
+                                    >
+                                        <i class="fas fa-user mr-3"></i> Perfil
+                                    </a>
+                                    <a
+                                        href="#"
+                                        class="dropdown-item"
+                                        id="qsLogoutBtn"
+                                        onclick="logout()"
+                                    >
+                                        <i class="fas fa-power-off mr-3"></i> Salir
+                                    </a>
+                                </div>
+                            </li>
+                            <!-- /Fullsize dropdown -->
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
-                    <!-- Fullsize dropdown: show if authenticated -->
-                    <li class="nav-item dropdown auth-visible hidden">
-                        <a
-                        class="nav-link dropdown-toggle"
-                        href="#"
-                        id="profileDropDown"
-                        data-toggle="dropdown"
-                        >
-                        <!-- Profile image should be set to the profile picture from the id token -->
-                        <img
-                        alt="Profile picture"
-                        class="nav-user-profile profile-image rounded-circle"
-                        width="50"
-                        />
-                    </a>
-                    <div class="dropdown-menu">
-                        <!-- Show the user's full name from the id token here -->
-                        <div class="dropdown-header nav-user-name user-name"></div>
-                        <a
-                        href="/profile"
-                        class="dropdown-item dropdown-profile route-link"
-                        >
-                        <i class="fas fa-user mr-3"></i> Perfil
-                    </a>
-                    <a
-                    href="#"
-                    class="dropdown-item"
-                    id="qsLogoutBtn"
-                    onclick="logout()"
-                    >
-                    <i class="fas fa-power-off mr-3"></i> Salir
-                </a>
-            </div>
-        </li>
-        <!-- /Fullsize dropdown -->
-    </ul>
 
-    <!-- Responsive login button: show if NOT authenticated -->
-    <ul class="navbar-nav d-md-none auth-invisible">
-        <button
-        class="btn btn-primary btn-block auth-invisible hidden"
-        id="qsLoginBtn"
-        onclick="login()"
+        </div>
+
+        <div
+            id="main-content"
+            class="container mt-9 flex-grow-1"
         >
-        Log in
-    </button>
-</ul>
-<!-- /Responsive login button -->
-
-<!-- Responsive profile dropdown: show if authenticated -->
-<ul
-class="navbar-nav d-md-none auth-visible hidden justify-content-between"
-style="min-height: 125px"
->
-<li class="nav-item">
-    <span class="user-info">
-        <!-- Profile image should be set to the profile picture from the id token -->
-        <img
-        alt="Profile picture"
-        class="nav-user-profile d-inline-block profile-image rounded-circle mr-3"
-        width="50"
-        />
-        <!-- Show the user's full name from the id token here -->
-        <h6 class="d-inline-block nav-user-name user-name"></h6>
-    </span>
-</li>
-<li>
-    <i class="fas fa-user mr-3"></i>
-    <a href="/profile" class="route-link">Profile</a>
-</li>
-
-<li>
-    <i class="fas fa-power-off mr-3"></i>
-    <a href="#" id="qsLogoutBtn" onclick="logout()">Log out</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-</div>
-
-<div id="main-content" class="container mt-5 flex-grow-1">
 
 
 
 
-    <div id="content-home" class="page">
+            <div
+                id="content-home"
+                class="page"
+            >
 
 
-        <div id="clueText"></div>
-        <div id="activeClue">
-            <img>
-            <iframe></iframe>
-        </div>
-
-
-        <h2>
-            👀 Pistas:
-        </h2>
-        <div id="clues" class="location-0">
-        </div>
-        <h2>
-            🕵️ Localizaciones:
-        </h2>
-        <ol id="locations">
-
-        </ol>
-
-
-
-
-
-
-        <div id="responseBox">
-            Haz clic en el mapa donde creas que se encuentra la ciudad.
-            <span id="response"></span>
-        </div>
-        <div id="viewDiv"></div>
-
-
-        <script type="module" src="js/map.js"></script>
-
-
-        </div>
-
-        <div class="page" id="content-profile">
-            <div class="container">
-                <div class="row align-items-center profile-header">
-                    <div class="col-md-2">
-                        <img
-                        alt="User's profile picture"
-                        class="rounded-circle img-fluid profile-image mb-3 mb-md-0"
-                        />
-                    </div>
-                    <div class="col-md">
-                        <h2 class="user-name"></h2>
-                        <p class="lead text-muted user-email"></p>
-                    </div>
+                <div id="clueText"></div>
+                <div id="activeClue">
+                    <img>
+                    <iframe></iframe>
                 </div>
+                <!-- <h2>
+                    🕵️ Localizaciones:
+                </h2> -->
+                <ol id="locations">
 
-                <div class="row">
-                    <pre class="rounded">
-                        <code id="profile-data" class="json"></code></pre>
-                    </div>
+                </ol>
+<div id="cluesDetails" class="location-0">
+
+                <div
+                    id="clues"
+
+                >
                 </div>
             </div>
+
+
+
+
+
+
+
+                <div id="responseBox">
+                    Haz clic en el mapa donde creas que se encuentra la ciudad.
+                    <span id="response"></span>
+                </div>
+                <div id="viewDiv"></div>
+
+
+                <script
+                    type="module"
+                    src="js/map.js"
+                ></script>
+
+
+            </div>
+
+            <!-- <div
+                class="page"
+                id="content-profile"
+            >
+                <div class="container">
+                    <div class="row align-items-center profile-header">
+                        <div class="col-md-2">
+                            <img
+                                alt="User's profile picture"
+                                class="rounded-circle img-fluid profile-image mb-3 mb-md-0"
+                            />
+                        </div>
+                        <div class="col-md">
+                            <h2 class="user-name"></h2>
+                            <p class="lead text-muted user-email"></p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <pre class="rounded">
+                    <code id="profile-data" class="json"></code></pre>
+                    </div>
+                </div>
+            </div> -->
         </div>
 
         <footer class="bg-light text-center p-5">
             <!-- <div class="logo"></div>
-                <p>
-                    Sample project provided by
-                    <a href="https://auth0.com">Auth0</a>
-                </p> -->
-            </footer>
-        </div>
+            <p>
+                Sample project provided by
+                <a href="https://auth0.com">Auth0</a>
+            </p> -->
+        </footer>
+    </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
-        <script src="js/ui.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/game.js"></script>
-        <script src="https://js.arcgis.com/4.18/"></script>
-    </body>
-    </html>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/palette.js"></script>
+    <script src="js/game.js"></script>
+    <script src="https://js.arcgis.com/4.18/"></script>
+</body>
+
+</html>
