--- a/game/index.html
+++ b/game/index.html
@@ -4,100 +4,124 @@
 <head>
     <meta charset="UTF-8" />
     <title>Terra Incógnita | Juego</title>
-
+    <script>
+        const host = window.location.hostname;
+        if (location.protocol !== 'https:' && !(host === 'localhost' || host === "127.0.0.1")) {
+            location.replace(`https:${location.href.substring(location.protocol.length)}`);
+        }
+    </script>
     <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+       rel="stylesheet"
+       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
 
     <link
-        rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
-        integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B"
-        crossorigin="anonymous"
+       rel="stylesheet"
+       href="https://use.fontawesome.com/releases/v5.7.2/css/solid.css"
+       integrity="sha384-r/k8YTFqmlOaqRkZuSiE9trsrDXkh07mRaoGBMoDcmA58OHILZPsk29i2BsFng1B"
+       crossorigin="anonymous"
     />
     <link
-        rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
-        integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+"
-        crossorigin="anonymous"
+       rel="stylesheet"
+       href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css"
+       integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+"
+       crossorigin="anonymous"
     />
     <link
-        rel="stylesheet"
-        href="css/styles.css"
+       rel="stylesheet"
+       href="css/styles.css"
     >
     <link
-        rel="stylesheet"
-        href="css/geonight-styles.css"
+       rel="stylesheet"
+       href="css/geonight-styles.css"
     >
     <link
-        rel="stylesheet"
-        type="text/css"
-        href="css/main.css"
+       rel="stylesheet"
+       type="text/css"
+       href="css/main.css"
     />
     <link
-        rel="stylesheet"
-        href="https://js.arcgis.com/4.18/esri/themes/light/main.css"
+       rel="stylesheet"
+       href="https://js.arcgis.com/4.18/esri/themes/light/main.css"
     >
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link
+       rel="shortcut icon"
+       href="images/favicon.ico"
+       type="image/x-icon"
+    >
 </head>
 
 <body class="h-100">
     <div
-        id="app"
-        class="h-100 d-flex flex-column"
+       id="app"
+       class="h-100 d-flex flex-column"
     >
         <div class="nav-container">
-            <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top bg-port-gore" id="mainNav">
+            <nav
+               class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top bg-port-gore"
+               id="mainNav"
+            >
                 <div class="container">
-                    <a class="navbar-brand js-scroll-trigger" href="#page-top">GeoNight <span class="subtitle">by AGE</span></a>
-                    <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <a
+                       class="navbar-brand js-scroll-trigger"
+                       href="#page-top"
+                    >GeoNight <span class="subtitle">by AGE</span></a>
+                    <button
+                       class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
+                       type="button"
+                       data-toggle="collapse"
+                       data-target="#navbarResponsive"
+                       aria-controls="navbarResponsive"
+                       aria-expanded="false"
+                       aria-label="Toggle navigation"
+                    >
                         Menu
-                        <svg class="svg-inline--fa fa-bars fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+                        <svg
+                           class="svg-inline--fa fa-bars fa-w-14"
+                           aria-hidden="true"
+                           focusable="false"
+                           data-prefix="fas"
+                           data-icon="bars"
+                           role="img"
+                           xmlns="http://www.w3.org/2000/svg"
+                           viewBox="0 0 448 512"
+                           data-fa-i2svg=""
+                        >
+                            <path
+                               fill="currentColor"
+                               d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
+                            ></path>
+                        </svg>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <div
+                       class="collapse navbar-collapse"
+                       id="navbarResponsive"
+                    >
                         <ul class="navbar-nav d-none d-md-block ml-auto">
-                            <!-- Login button: show if NOT authenticated -->
-                            <li class="nav-item auth-invisible">
-                                <button
-                                    id="qsLoginBtn"
-                                    onclick="login()"
-                                    class="btn btn-primary btn-margin auth-invisible hidden"
-                                >
-                                    Identifícate
-                                </button>
-                            </li>
-                            <!-- / Login button -->
 
                             <!-- Fullsize dropdown: show if authenticated -->
                             <li class="nav-item dropdown auth-visible hidden">
                                 <a
-                                    class="nav-link dropdown-toggle"
-                                    href="#"
-                                    id="profileDropDown"
-                                    data-toggle="dropdown"
+                                   class="nav-link dropdown-toggle"
+                                   href="#"
+                                   id="profileDropDown"
+                                   data-toggle="dropdown"
                                 >
                                     <!-- Profile image should be set to the profile picture from the id token -->
                                     <img
-                                        alt="Profile picture"
-                                        class="nav-user-profile profile-image rounded-circle"
-                                        width="50"
+                                       alt="Profile picture"
+                                       class="nav-user-profile profile-image rounded-circle"
+                                       width="50"
                                     />
                                 </a>
                                 <div class="dropdown-menu">
                                     <!-- Show the user's full name from the id token here -->
                                     <div class="dropdown-header nav-user-name user-name"></div>
                                     <a
-                                        href="/profile"
-                                        class="dropdown-item dropdown-profile route-link"
-                                    >
-                                        <i class="fas fa-user mr-3"></i> Perfil
-                                    </a>
-                                    <a
-                                        href="#"
-                                        class="dropdown-item"
-                                        id="qsLogoutBtn"
-                                        onclick="logout()"
+                                       href="#"
+                                       class="dropdown-item"
+                                       id="qsLogoutBtn"
+                                       onclick="logout()"
                                     >
                                         <i class="fas fa-power-off mr-3"></i> Salir
                                     </a>
@@ -113,43 +137,131 @@
         </div>
 
         <div
-            id="main-content"
-            class="container mt-9 flex-grow-1"
+           id="main-content"
+           class="container mt-9 flex-grow-1"
         >
 
-
-
+            <div
+               class="page hidden"
+               id="content-home"
+            >
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Instrucciones:</h1>
+                            <h2>Objetivo del juego</h2>
+                            <p>
+                                El juego consiste en adivinar las ubicaciones en el menor tiempo posible cometiendo el
+                                menor error (distancia) posible. Antes de terminar habrá una última pregunta que
+                                ponderará la puntuación final.
+                            </p>
+                            <h2>Dinámica de funcionamiento</h2>
+                            <ul>
+                                <li>Cada equipo partirá de 100.000 puntos</li>
+                                <li>
+                                    Al introducir el nombre del equipo (tras identificarse) empezará a correr el tiempo.
+                                </li>
+                                <li>
+                                    Por cada ubicación se darán una serie de pistas (el número de pistas no es el mismo
+                                    para todas las ubicaciones)
+                                </li>
+                                <li>Una vez respondida una ubicación no se podrá volver a intentar</li>
+                            </ul>
+                            <h2>Sistema de puntuación:</h2>
+                            <p>
+                                La puntuación se calculara a partir de la siguiente fórmula: <br>
+                                Puntuación final = 100.000 -
+                                (Error acumulado (Distancias en KM) x Tº empleado para la prueba (en segundos)) * Factor
+                                ponderación (1.2 so acierta si la última pregunta, 1 sino).
+                            </p>
+                            <h2>¿Listos para empezar?</h2>
+                            <p>Regístrate e introduce tu nombre de equipo</p>
+                            <div class="nav-item auth-invisible">
+                                <button
+                                   id="qsLoginBtn"
+                                   onclick="login()"
+                                   class="btn btn-primary btn-margin auth-invisible hidden"
+                                >
+                                    Empezar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div
-                id="content-home"
-                class="page"
+               id="content-team-name"
+               class="page hidden"
             >
+                <div class="row">
+                    <div class="col text-center">
+                        <form id="registerName">
 
+                            <label for="teamName">Introduce el nombre de tu equipo</label>
+                            <input
+                               type="text"
+                               class="form-control"
+                               id="teamName"
+                               aria-describedby="emailHelp"
+                               placeholder="Eratosthenes"
+                               required
+                            >
+                            <button
+                               type="submit"
+                               class="btn btn-primary mt-2 btn-block"
+                            >Comenzar</button>
+                        </form>
+                    </div>
 
+                </div>
+
+            </div>
+
+            <div
+               id="content-game"
+               class="page hidden"
+            >
+                <div
+                   class="row"
+                   id="team-data"
+                >
+                    <div
+                       class="col-md-4 text-center"
+                       id="team-name"
+                    >
+                        Equipo:
+                        <span></span>
+                    </div>
+                    <div
+                       class="col-md-4 text-center"
+                       id="team-error"
+                    >
+                        Error acumulado: <span>0km</span>
+                    </div>
+                    <div
+                       class="col-md-4 "
+                       id="team-time"
+                    >
+                        Tiempo: <span></span>
+                    </div>
+                </div>
                 <div id="clueText"></div>
                 <div id="activeClue">
                     <img>
                     <iframe></iframe>
                 </div>
-                <!-- <h2>
-                    🕵️ Localizaciones:
-                </h2> -->
                 <ol id="locations">
 
                 </ol>
-<div id="cluesDetails" class="location-0">
-
                 <div
-                    id="clues"
-
+                   id="cluesDetails"
+                   class="location-0"
                 >
+
+                    <div id="clues">
+                    </div>
                 </div>
-            </div>
-
-
-
-
-
 
 
                 <div id="responseBox">
@@ -160,52 +272,20 @@
 
 
                 <script
-                    type="module"
-                    src="js/map.js"
+                   type="module"
+                   src="js/map.js"
                 ></script>
 
 
             </div>
 
-            <!-- <div
-                class="page"
-                id="content-profile"
-            >
-                <div class="container">
-                    <div class="row align-items-center profile-header">
-                        <div class="col-md-2">
-                            <img
-                                alt="User's profile picture"
-                                class="rounded-circle img-fluid profile-image mb-3 mb-md-0"
-                            />
-                        </div>
-                        <div class="col-md">
-                            <h2 class="user-name"></h2>
-                            <p class="lead text-muted user-email"></p>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <pre class="rounded">
-                    <code id="profile-data" class="json"></code></pre>
-                    </div>
-                </div>
-            </div> -->
         </div>
-
-        <footer class="bg-light text-center p-5">
-            <!-- <div class="logo"></div>
-            <p>
-                Sample project provided by
-                <a href="https://auth0.com">Auth0</a>
-            </p> -->
-        </footer>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
     <script src="js/palette.js"></script>
