Adding Locate on the map

--- a/game/index.html
+++ b/game/index.html
@@ -251,6 +251,21 @@
                     <img>
                     <iframe></iframe>
                 </div>
+                <div id="viewDiv"></div>
+                <div class="text-center mt-3">
+                    <button
+                       class="btn btn-primary"
+                       id="locatePlace"
+                    >
+                        UBICAR LOCALIZACIÓN
+                    </button>
+                    <button
+                       class="btn btn-primary hidden"
+                       id="returnToClues"
+                    >
+                        VOLVER A LAS PISTAS
+                    </button>
+                </div>
                 <ol id="locations">
 
                 </ol>
@@ -268,7 +283,6 @@
                     Haz clic en el mapa donde creas que se encuentra la ciudad.
                     <span id="response"></span>
                 </div>
-                <div id="viewDiv"></div>
 
 
                 <script
