--- a/game/index.html
+++ b/game/index.html
@@ -251,7 +251,10 @@
                     <img>
                     <iframe></iframe>
                 </div>
-                <div id="viewDiv"></div>
+                <div
+                   id="viewDiv"
+                   data-location="0"
+                ></div>
                 <div class="text-center mt-3">
                     <button
                        class="btn btn-primary"
@@ -285,11 +288,6 @@
                 </div>
 
 
-                <script
-                   type="module"
-                   src="js/map.js"
-                ></script>
-
 
             </div>
 
@@ -303,7 +301,11 @@
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
     <script src="js/palette.js"></script>
-    <script src="js/game.js"></script>
+    <script
+       type="module"
+       src="js/game.js"
+    ></script>
+    <!-- <script src="js/game.js"></script> -->
     <script src="https://js.arcgis.com/4.18/"></script>
 </body>
 
