--- a/game/index.html
+++ b/game/index.html
@@ -163,6 +163,9 @@
                                     Por cada ubicación se darán una serie de pistas (el número de pistas no es el mismo
                                     para todas las ubicaciones)
                                 </li>
+                                <li>No hace falta ver todas las pistas</li>
+                                <li>Cuando hagas clic en el mapa se enviará automáticamente (cuidado), y no se pueden
+                                    enviar dos veces</li>
                                 <li>Una vez respondida una ubicación no se podrá volver a intentar</li>
                             </ul>
                             <h2>Sistema de puntuación:</h2>
@@ -324,13 +327,13 @@
                                id="customRadio5"
                                name="testFinal"
                                class="custom-control-input"
-                               value="La vuelta al mundo"
+                               value="Circunavegación"
                             >
                             <label
                                class="custom-control-label"
                                for="customRadio5"
                             >
-                                La vuelta al mundo
+                                Circunavegación
                             </label>
                         </div>
                         <div class="custom-control custom-radio">
@@ -339,26 +342,11 @@
                                id="customRadio6"
                                name="testFinal"
                                class="custom-control-input"
-                               value="Circunavegación"
-                            >
-                            <label
-                               class="custom-control-label"
-                               for="customRadio6"
-                            >
-                                Circunavegación
-                            </label>
-                        </div>
-                        <div class="custom-control custom-radio">
-                            <input
-                               type="radio"
-                               id="customRadio7"
-                               name="testFinal"
-                               class="custom-control-input"
                                value="Expedición"
                             >
                             <label
                                class="custom-control-label"
-                               for="customRadio7"
+                               for="customRadio6"
                             >
                                 Expedición
                             </label>
@@ -418,7 +406,7 @@
                class="hidden"
             >
                 <p>
-                    Vuestro resultado final es: <spain id="finalPoints"></spain>
+                    Vuestra final es: <spain id="finalPoints"></spain>
                 </p>
             </div>
         </div>
